--- a/package.json
+++ b/package.json
@@ -39,31 +39,64 @@
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.17.1"
+    "@bitauth/libauth": "^1.17.1",
+    "lodash": "^4.17.21",
+    "io-ts": "^2.2.16",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "fp-ts": "^2.5.3",
+    "io-ts-types": "^0.5.6",
+    "knex": "^0.21.15"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@types/chai": "^4.1.7",
+    "@types/chai-almost": "^1.0.1",
+    "@types/chai-as-promised": "^7.1.1",
+    "@types/chai-subset": "^1.3.3",
+    "@types/deep-equal-in-any-order": "^1.0.1",
+    "@types/faker": "^5.1.3",
+    "@types/lodash": "^4.14.149",
+    "@types/mocha": "^8.0.0",
+    "@types/mock-knex": "^0.4.1",
+    "@types/node": "^15.0.2",
+    "@types/sinon": "^9.0.0",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "ava": "^3.12.1",
+    "axios-mock-adapter": "^1.17.0",
+    "chai": "^4.2.0",
+    "chai-almost": "^1.0.1",
+    "chai-as-promised": "^7.1.1",
+    "chai-exclude": "^2.0.2",
+    "chai-subset": "^1.6.0",
     "codecov": "^3.5.0",
     "cspell": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
+    "deep-equal-in-any-order": "^1.0.24",
     "eslint": "^7.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-functional": "^3.0.2",
     "eslint-plugin-import": "^2.22.0",
+    "faker": "^5.1.0",
     "gh-pages": "^3.1.0",
+    "mocha": "^8.3.0",
+    "mocha-junit-reporter": "^2.0.0",
+    "mock-knex": "^0.4.7",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
     "prettier": "^2.1.1",
+    "sinon": "^9.0.0",
     "standard-version": "^9.0.0",
+    "supertest": "^6.0.0",
+    "ts-essentials": "^7.0.0",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.0",
     "typescript": "^4.0.2"
