--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "test:lint": "eslint src --ext .ts",
     "test:prettier": "prettier \"src/**/*.ts\" --list-different",
     "test:spelling": "cspell \"{README.md,.github/*.md,src/**/*.ts}\"",
-    "test:unit": "nyc --silent ava",
+    "test:unit": "nyc --silent mocha",
     "check-cli": "run-s test diff-integration-tests check-integration-tests",
     "check-integration-tests": "run-s check-integration-test:*",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
     "watch:build": "tsc -p tsconfig.json -w",
-    "watch:test": "nyc --silent ava --watch",
+    "watch:test": "nyc --silent mocha --watch",
     "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
     "cov:html": "nyc report --reporter=html",
     "cov:lcov": "nyc report --reporter=lcov",
@@ -49,7 +49,11 @@
     "express": "^4.17.1",
     "fp-ts": "^2.5.3",
     "io-ts-types": "^0.5.6",
-    "knex": "^0.21.15"
+    "knex": "^0.21.15",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
+    "monocle-ts": "^2.3.3",
+    "newtype-ts": "^0.3.4"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
@@ -63,9 +67,11 @@
     "@types/lodash": "^4.14.149",
     "@types/mocha": "^8.0.0",
     "@types/mock-knex": "^0.4.1",
+    "@types/moment-timezone": "^0.5.30",
     "@types/node": "^15.0.2",
     "@types/sinon": "^9.0.0",
     "@types/supertest": "^2.0.8",
+    "@types/ramda": "^0.27.40",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "ava": "^3.12.1",
@@ -93,6 +99,7 @@
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
     "prettier": "^2.1.1",
+    "ramda": "^0.27.1",
     "sinon": "^9.0.0",
     "standard-version": "^9.0.0",
     "supertest": "^6.0.0",
