--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    //    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
     "incremental": true,
     "target": "es2019",
     "outDir": "build/main",
@@ -7,7 +9,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "declaration": true,
-    "inlineSourceMap": true,
+    //    "inlineSourceMap": true,
     "esModuleInterop": false /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true /* Include modules imported with .json extension. */,
@@ -39,12 +41,22 @@
     // "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
     "lib": [
-      "es2019",
+      "es2019"
     ],
-    "types": ["node", "mocha"],
-    "typeRoots": ["node_modules/@types", "src/types"]
+    "types": [
+      "node",
+      "mocha"
+    ],
+    "typeRoots": [
+      "node_modules/@types",
+      "src/types"
+    ]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules/**"],
-  "compileOnSave": false
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules/**"
+  ],
+  "compileOnSave": true
 }
