--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
   ],
   "globals": { "BigInt": true, "console": true, "WebAssembly": true },
   "rules": {
+    "@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
@@ -30,6 +31,7 @@
       { "ignoreDeclarationSort": true, "ignoreCase": true }
     ],
     "functional/prefer-readonly-type": "off",
+    "prefer-const": "warn",
     "@typescript-eslint/quotes": [
       "error",
       "single",
