--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "monocle-ts": "^2.3.3",
-    "newtype-ts": "^0.3.4"
+    "newtype-ts": "^0.3.4",
+    "ramda": "^0.27.1"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
@@ -99,7 +100,6 @@
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
     "prettier": "^2.1.1",
-    "ramda": "^0.27.1",
     "sinon": "^9.0.0",
     "standard-version": "^9.0.0",
     "supertest": "^6.0.0",
