--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
     //    "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "incremental": true,
-    "target": "es2019",
+    "target": "es2020",
     "outDir": "build/main",
     "rootDir": "src",
     "moduleResolution": "node",
-    "module": "commonjs",
+    "module": "CommonJS",
     "declaration": true,
     //    "inlineSourceMap": true,
     "esModuleInterop": false /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
